[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.2"
dependencies = [
    "fastapi>=0.115.0",
    "faster-whisper>=1.1.0",
    "ipykernel>=7.1.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "pymupdf>=1.26.6",
    "pypdf>=6.4.1",
    "chromadb>=0.3.23",
    "faiss-cpu>=1.13.0",
    "sentence-transformers>=5.1.2",
    "numpy",
    "scikit-learn",
    "langchain-groq>=1.1.0",
    "python-dotenv>=1.2.1",
    "langchain-openai>=1.1.0",
    "python-pptx>=1.0.2",
    "pillow>=12.0.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "pytesseract>=0.3.13",
    "unstructured>=0.18.21",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]
